# Homework_24.2

./: .env.sample  Dockerfile  cov_report  docker-compose.yaml  payment.json  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serialaizers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_course_course_owner_lesson_lesson_owner.py  0004_subscription.py  0005_subscription_active.py  0006_course_last_update.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_users_citiy.py  0003_payments.py  0004_alter_payments_paid_course_and_more.py  0005_alter_payments_user.py  0006_payments_id_session_payments_link.py  0007_alter_payments_user.py
